--- a/LOGO/style.css
+++ b/LOGO/style.css
@@ -1,34 +1,460 @@
 * {
     padding: 0;
-    margin: 20;
-}
-.logo > a{
-    display: flex;
-    font-size: 10px;
-}
-.nav_container{
-display: flex;
-margin-right: 5px;
-justify-content: space-between;
-nav-index: inherit;
+    margin:0;
 }
 
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.logo {
+    border-radius: 10%;
+    padding: 10px;
+}
+
+a {
+    text-decoration: none;
+}
+.nav_container {
+    width: 50%;
+}
 .ul_nav{
     display: flex;
+    justify-content: space-between;
+    
+}
+.ul_nav > li {
+    list-style-type: none;
+    border: 1px solid;
+    width: 18%;
+    text-align: center;
+    margin: auto 10px;
+    
 }
 
-body{
-    background-color: brown;
+.ul_nav a{
+    color: white;
+}
+    
+ .Esty{
+    background-color: black;
+
+} 
+.quency{
+    height: 200px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.pp{
+    margin-left: 220px;
+    margin-top: 60px;
+}
+
+.pp  p{
+    color: white;
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.parent img{
+    width: 650px;
+    height: 400px;
+    border-radius: 20px;
+
+}
+
+.foot p{
+    color: white;
+    margin-top: 200px;
+}
+
+
+.connect {
+    display: flex;
+    width: 100px;
+    justify-content: space-between;  
+}
+.ab{
+    border-radius: 10px;
+    padding: 10px;
+    margin-left: auto;
+
+}
+
+.div_container > p{
+    padding: 0%;
+    text-align: right;
+    display: flex;
+ } 
+ .p2{
+    padding: 1%;
+ }
+ .p4{
+    padding: 1%;
+ } 
+
+.login-body {
+    background-image: url('./Grp_rice.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+
+}
+
+.login-form {
+    border-radius: 10%;
+    background-color: aliceblue;
+    border: 0px solid;
+    width: 13%;
+    margin: 5% auto;
+    padding: 5%; 
+}
+.p3{
+    display: flex;
+    width: 100px;
+    justify-content: space-between;
+}
+.conet {
+   margin-top: 400px;
+}
+.coneet {
+    display: flex;
+    width: 100px;
+    justify-content: space-between;
+}
+
+
+.registration-body {
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    min-height: 100vh;
+}
+.registration-form {
+    border-radius: 10%;
+    background-color: aliceblue;
+    border: 2px solid;
+    width: 20%;
+    margin: 5% auto;
+    padding: 1%;
+    }
+.con_1{
+    padding: 1%;
+    display: flex;
+    justify-content: space-between;
+}
+.roll_3 {
+    padding: 1%;
+}
+.roll_5{
+    padding: 1%;
+}
+.nav_container1 {
+    width: 100%;
+   
+   
+}
+.ul_nav1{
+    display: flex;
+    justify-content: space-between;
+    
     
 }
-.logo_text{
-    color: blueviolet;
-}
-.parent{
-    color: blueviolet;
+.ul_nav1 > li {
+    list-style-type: none;
+    border: 0px solid;
+    width: 18%;
+    padding: 1%;
+    text-align: center;
+    margin: auto 10px;
     
 }
-.parent_h1{
-    color: blueviolet;
+
+.ul_nav1 a{
+    color: black;
+}
+
+.nav_container2 {
+    width: 100%;
+   
+   
+}
+.ul_nav2{
+    display: flex;
+    justify-content: space-between;
+    
     
 }
+.ul_nav2 > li {
+    list-style-type: none;
+    border: 0px solid;
+    width: 18%;
+    padding: 1%;
+    text-align: right;
+    margin-right: 1%;
+    
+}
+
+.ul_nav3 a{
+    color: black;
+}
+.nav_container4 {
+    width: 100%;
+   
+   
+}
+.ul_nav4{
+    display: flex;
+    
+    
+    
+}
+.ul_nav4 > li {
+    list-style-type: none;
+    border: 0px solid;
+    width: 18%;
+    padding: 1%;
+    text-align: right;
+    margin-right: 1%;
+    
+}
+
+.ul_nav4 a{
+    color: black;
+}
+.group_3{
+    padding: 5%;
+    justify-content: right;
+}
+.footer > us{
+    display: flex;
+}
+footer>div{
+    width: 300px;
+}
+.group_img{
+    border-radius: 10%;
+    padding: 1%;
+    
+}
+.group_2{
+    padding: 1%;
+}
+.group_5{
+    padding: 1%;
+}
+.group_6{
+    padding: 1%;
+}
+
+
+.ind_2{
+    padding: 1%;
+}
+.ind_4{
+    display: flex;
+    padding: 1%;
+}
+.ind_5{
+    display: flex;
+    padding: 1%;
+}
+.ind_7{
+    padding: 1%;
+}
+.sal_2{
+    padding: 1%;
+}
+.sal_4{
+    padding: 1%;
+}
+.sal_5{
+    padding: 1%;
+}
+.vid_1{
+    padding: 1%;
+    display: flex;
+}
+.sal_7{
+    display: flex;
+}
+.sal_8{
+    padding: 1%;
+}.sal_9{
+    padding: 1%;
+}
+.sal_10{
+    padding: 1%;
+}
+.sal_11{
+    padding: 1%;
+}
+.sal_12{
+    padding: 1%;
+}
+.sal_13{
+    padding: 1%;
+}
+.sal_14{
+    padding: 1%;
+}
+.sal_15{
+    padding: 1%;
+}
+.sal_16{
+    padding: 1%;
+}
+.sal_17{
+    padding: 1%;
+}
+.sal_18{
+    padding: 1%;
+}
+.sal_19{
+    padding: 1%;
+}
+.sal_image{
+    border-radius: 5%;
+    padding: 5%;
+}
+.sal_20{
+    padding: 1%;
+}
+.sal_21{
+    padding: 1%;
+}
+.sal_22{
+    padding: 1%;
+}
+.sal_23{
+    padding: 1%;
+}
+.sal_24{
+    padding: 1%;
+}
+.sal_25{
+    padding: 1%;
+}
+.joll_2{
+    padding: 1%;
+}
+.joll_4{
+    padding: 1%;
+}
+.joll_5{
+    padding: 1%;
+}
+
+.joll_6{
+    padding: 1%;
+}
+.joll_7{
+    padding: 1%;
+}
+.joll_8{
+    padding: 1%;
+}
+.joll_9{
+    padding: 1%;
+}
+.joll_10{
+    padding: 1%;
+}
+.joll_image{
+    border-radius: 5%;
+    padding: 5%;
+}
+.joll_image1{
+    border-radius: 5%;
+    padding: 5%;
+}
+.joll_image2{
+    border-radius: 5%;
+    padding: 5%;
+}
+.joll_11{
+    padding: 1%;
+}
+.joll_image3{
+    border-radius: 5%;
+    padding: 5%;
+}
+.joll_12{
+    padding: 1%;
+}
+.joll_image4{
+    border-radius: 5%;
+    padding: 5%;
+}.joll_13{
+    padding: 1%;
+}
+.joll_image5{
+    border-radius: 5%;
+    padding: 5%;
+}
+.joll_14{
+    padding: 1%;
+}
+.joll_15{
+    padding: 1%;
+}
+.joll_image6{
+    border-radius: 5%;
+    padding: 5%;
+}
+.joll_16{
+    padding: 1%;
+}
+
+.pla_2{
+    padding: 1%;
+}
+.pla_4{
+    padding: 1%;
+}
+.pla_5{
+    padding: 1%;
+}
+.pla_6{
+    padding: 1%;
+}
+.pla_15{
+    padding: 1%;
+}
+.pla_17{
+    padding: 1%;
+}
+.chi_5{
+    padding: 1%;
+}
+.chi_8{
+    padding: 1%;
+}
+.chi_7{
+    padding: 1%;
+}
+.chi_9{
+    padding: 1%;
+}
+.chi_10{
+    padding: 1%;
+}
+.chi_11{
+    padding: 1%;
+}
+.chi_12{
+    padding: 1%;
+}
+.chi_13{
+    padding: 1%;
+}
+.chi_14{
+    padding: 1%;
+}
+
+
+
