--- a/LOGO/style.css
+++ b/LOGO/style.css
@@ -508,6 +508,22 @@ a {
 .coco_10{
     padding: 1%;
 }
+/*.nav_form{
+    display: flex;
+    padding: 5%;
+   position: absolute;
+    font-size: 16px;
+    font-weight: 500;
+    background-color: beige;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    padding: 20%;
+    border-radius: 25px;
+    max-height: 70%;
+    overflow-y: auto;
+}*/
+.
 
 
 
